@@ -1,0 +1,2 @@
+config.save
+sqlnet.log
