@@ -1,0 +1,3 @@
+Makefile
+mkmf.log
+extconf.h
