@@ -1,3 +1,4 @@
+/* -*- c-file-style: "ruby"; indent-tabs-mode: nil -*- */
 /*
  *  oradate.c
  *
@@ -350,8 +351,8 @@ static void bind_oradate_init(oci8_bind_t *bb, VALUE svc, VALUE *val, VALUE leng
 static oci8_bind_class_t bind_oradate_class = {
     {
         NULL,
-	oci8_bind_free,
-	sizeof(oci8_bind_oradate_t)
+        oci8_bind_free,
+        sizeof(oci8_bind_oradate_t)
     },
     bind_oradate_get,
     bind_oradate_set,
